uploaded images and stuffs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>-->
     <main>
    <div id="title">
-    Find YOur Soulmate
+    Find Y<img src="images/heartgif.gif" width="45px" height="45px" alt="">ur Soulmate 
    </div>
    <div id="form">
     <label>
@@ -47,15 +47,33 @@ submit
         <li id="li"></li>
         <li id="li"></li>
         <li id="li"></li>
+        <li id="li" class="sixth"></li>
         <li id="li"></li>
-        <li id="li"></li>
-        <li id="li"></li>
-        <li id="li"></li>
+        <li id="li" class="eighth"></li>
+        <li id="li" class="ninth"></li>
         <li id="li"></li>
         
     </ul>
     </div>
 </section>
+
+<header id="head">
+    <div class="the-listss">
+        <ul class="heartss">
+        <li id="li1"> </li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        <li id="li1"></li>
+        
+    </ul>
+    </div>
+</header>
 
     <script src="index.js"></script>
 </body>
