making the inputs required

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
    </div>
    <div id="form">
     <label>
-        <input id="inputyour" type="text"  placeholder="Enter your name" >
+        <input id="inputyour" type="text"  placeholder="Enter your name" required >
         <span>Your-name</span>
     </label> 
         
     <label>
-        <input id="inputhis" type="text" placeholder="Enter His/Her name" >
+        <input id="inputhis" type="text" placeholder="Enter His/Her name" required >
         <span>His/Her name</span>
     </label>
     <button id="btns">
